--- a/Техномарт/css/style.css
+++ b/Техномарт/css/style.css
@@ -6,6 +6,49 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'Cuprum';
+  src: local('cuprumbold'),
+       url(../fonts/cuprumbold.woff2);
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Cuprum';
+  src: local('cuprumbolditalic'),
+       url(../fonts/cuprumbolditalic.woff2);
+  font-weight: 700;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Cuprum';
+  src: local('cuprumitalic'),
+       url(../fonts/cuprumitalic.woff2);
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'PTsans';
+  src: local('ptsans'),
+       url(../fonts/ptsans.woff2);
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'PTsans';
+  src: local('ptsansbold'),
+       url(../fonts/ptsansbold.woff2);
+  font-weight: 700;
+  font-style: normal;
+}
+
+
+
+html,
 body {
   margin: 0;
   padding: 0;
@@ -18,4 +61,128 @@ body {
 
   background-color: #ffffff;
   
+}
+
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
+  position: absolute;
+
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+
+
+.main-header h1 {
+  width: 220px;
+  margin: 0;
+  
+  box-shadow: 0 5px 0 0 #b52933;
+  background-color: #ee3643;
+  font-size: 24px;
+  line-height: 24px;
+  font-weight: 400;
+  text-transform: uppercase;
+  
+}
+
+.user-toolkit {
+  display: flex;
+  
+  font-size: 17px;
+  line-height: 18px;
+  color: #fff;
+  
+}  
+
+.logo a {
+  display: inline-block;
+  padding: 11px 55px;  
+}
+
+.main-header-wrapper {
+  width: 100%;
+  
+  background-color: #293449;
+  margin-bottom: 45px;
+}
+
+.container {
+  width: 960px;
+  margin: 0 auto;
+  padding: 0 10px;
+
+}
+
+/* баг с меньшением ширины окна. врапер уменьшается меньше 960px */
+.main-header .container {
+  background-color: #293449;
+} 
+
+.search-form input {
+  width: 270px;
+  padding: 12px 0;
+  padding-left: 50px;
+  
+  border: none;
+  background-color: transparent;
+  font: inherit;
+  color: #fff;
+  
+}
+
+.button-list {
+  display: flex;
+  
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  border: 5px solid red;
+}
+
+.button-list a {
+  margin: 0;
+  padding: 0;
+  display: block;
+}
+
+.button-item {
+  box-sizing: border-box;
+  border: 2px solid black;
+}
+.button-item1 a{
+  width: 140px;
+}
+
+.button-item2 a{
+  width: 160px;
+}
+
+.button-item3 a{
+  min-width: 150px;
+  padding: 14px 0;
+  padding-left: 20px;
+  
+  background-color: #63a63e;
 }
