--- a/Техномарт/css/style.css
+++ b/Техномарт/css/style.css
@@ -161,17 +161,17 @@ input[type="radio"].visually-hidden {
   border: 5px solid red;
 }
 
-.button-list a {
-  margin: 0;
-  padding: 0;
-  display: block;
+.header-buttons {
+    display: flex;
+    align-items: center;
 }
 
-.button-item {
-  box-sizing: border-box;
-  border: 2px solid black;
+.header-buttons a {
+    
+    flex: 1;
 }
-.button-item1 a{
+
+.bookmarks a{
   width: 140px;
 }
 
@@ -179,7 +179,7 @@ input[type="radio"].visually-hidden {
   width: 160px;
 }
 
-.button-item3 a{
+.ordering {
   min-width: 150px;
   padding: 14px 0;
   padding-left: 20px;
