--- a/css/style.css
+++ b/css/style.css
@@ -463,27 +463,81 @@ input[type="radio"].visually-hidden {
 .slider-wrapper {
   outline: 1px solid black;
   position: relative;
-  min-height: 100px;
+  height: 266px;
   width: 620px;
-  background-color: rgba(1, 255, 1, 0.2);
+
+}
+
+.slider-wrapper input {
+  display: none;
 }
 
 .slider {
-	background-color: rgba(255, 0, 1, 0.2);
+	position: relative;
+  width: inherit;
+  height: inherit;
+  overflow: hidden;
+  background-color: #ddd;
+  
 }
 
 .slides {
-	background-color: orange;
+	position: absolute;
+  width: inherit;
+  height: inherit;
 }
 
 .slide1 {
-	width: inherit;
-	height: inherit;
-	background-image: url(../img/bosch-bottom.jpg);
+	
+	background-image: url(../img/bosch-top.jpg);
 	background-repeat: no-repeat;
 	background-position: 0 0;
 }
 
+.slide2 {
+  
+  background-image: url(../img/bosch-bottom.jpg);
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.slider-wrapper .controls {
+  position: absolute;
+  left: 290px;
+  bottom: 42px;
+}
+
+.slider-controls label {
+  position: relative;
+  cursor: pointer;
+  display: inline-block;
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  background-color: #fff;
+  border: 3px solid #fff;
+}
+
+.slider-controls label:nth-of-type(1) {
+  margin-right: 8px;
+}
+
+#slide1:checked ~ .slider-controls label:nth-of-type(1),
+#slide2:checked ~ .slider-controls label:nth-of-type(2) {
+  background-color: red;
+}
+/*
+.slider-wrapper label::after {
+  content: "";
+  position: absolute;
+  left: -4px;
+  top: -4px;
+  width: 10px;
+  height: 10px;
+  border: 4px solid #fff;
+  border-radius: 50%;
+}
+*/
 .promo-other-list {
   display: flex;
   flex-direction: column;
@@ -494,8 +548,8 @@ input[type="radio"].visually-hidden {
 }
 
 .sales {
-  background-color: #85d179;
-  margin-bottom: 20px;
+  background-color:;
+  margin-bottom: 18px;
 }
 
 .sales::before {
