--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@
 
 
 
-html,
+
 body {
   margin: 0;
   padding: 0;
@@ -62,6 +62,7 @@ body {
   background-color: #ffffff;
   
 }
+
 
 a {
   color: #fff;
@@ -1183,6 +1184,10 @@ why slider doesnt work? do right-left buttons */
 	box-shadow: inset 0 -1px 0 0 #293449, inset 0 1px 0 0 #405069;
 }
 
+.services-item label:hover {
+  background-color: #293449;
+}
+
 #services-1:checked ~ .services-wrapper .services-item-1,
 #services-2:checked ~ .services-wrapper .services-item-2,
 #services-3:checked ~ .services-wrapper .services-item-3 {
@@ -1430,6 +1435,7 @@ border-radius: 5px;
   padding: 15px 28px;
 }
 
+
 .footer-site-navigation li:nth-child(6) {
   margin-left: 22px;
 }
@@ -1440,11 +1446,13 @@ border-radius: 5px;
 
 .footer-site-navigation a:hover,
 .footer-site-navigation a:focus {
-  text-decoration: underline: ;
+  text-decoration: underline;
 }
 
 .footer-site-navigation a:active {
   opacity: 0.5;
+  text-decoration: none;
+  
 }
 
 .footer-bottom {
@@ -1486,3 +1494,245 @@ border-radius: 5px;
   fill: #fff;
   
 }
+
+.social-list a:hover,
+.social-list a:focus,
+.social-list a:active {
+  background-color: #ee3643;
+}
+
+.footer-bottom p a:hover,
+.footer-bottom p a:focus {
+  text-decoration: underline;
+}
+
+.footer-bottom p a:active {
+  color: #ee3643;
+  text-decoration: none;
+}
+
+
+
+
+/* catalog.html */
+
+.inner-page-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+
+.breadcrumbs {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.breadcrumbs li {
+  position: relative;
+}
+
+.breadcrumbs a {
+  text-decoration: none;
+  color: #000;
+  margin-right: 30px;
+  text-transform: uppercase;
+}
+
+
+
+.breadcrumbs li:not(:first-child) a::before {
+  content: "";
+  position: absolute;
+  top: 3px;
+  left: -20px;
+  width: 8px;
+  height: 12px;
+  background-image: url(../svg/icon-right-small.svg);
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.page-title {
+  padding: 34px 30px;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 30px;
+  color: #32425c;
+  text-transform: uppercase;
+  background-color: #f2f6f8;
+}
+
+.filters {
+  width: 220px;
+  display: flex;
+  flex-direction: column;
+}
+
+.filters-title {
+  
+  padding: 11px 20px;
+  font-family: 'PTsans','Arial',sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+  font-weight: 400;
+  text-transform: uppercase;
+  background-color: #f7f3ec;
+}
+
+.check-filter {
+  border: 0;
+  padding: 0;
+  margin: 0;
+  font-size: 17px;
+  line-height: 30px;
+}
+
+.inner-page form {
+  font-family: 'PTsans','Arial',sans-serif;
+  
+}
+
+.check-filter .legend {
+  
+}
+
+.check-filter ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.check-filter li {
+  padding-left: 35px;
+  position: relative;
+}
+
+.catalog {
+	  width: 700px;
+}
+
+.catalog-list {
+	display: flex;
+	justify-content: space-between;
+  flex-wrap: wrap;
+	padding: 0;
+	margin: 0;
+	list-style: none;
+	font-weight: 700;
+
+}
+
+
+
+.catalog .title {
+	display: block;
+	padding: 0 25px;
+	font-size: 18px;
+	
+	line-height: 20px;
+	color: #000;
+	text-align: center;
+	margin-top: 12px;
+}
+
+
+.catalog-item {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 220px;
+	min-height: 250px;
+	outline: 1px solid #F7F3EC;
+	position: relative;
+	
+}
+
+
+.catalog-item:hover {
+	box-shadow: 0 10px 35px 5px #bec2c6;
+}
+
+.catalog-item:nth-child(4)::after {
+	position: absolute;
+	content: "";
+	top: 0;
+	right: 0;
+	width: 60px;
+	height: 60px;
+	background-image: url(../img/new-flag.png);
+	background-repeat: no-repeat;
+	background-position: 0 0;
+}
+	
+
+.catalog-image {
+	width: inherit;
+	opacity: 1;
+	
+	min-height: 167px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.catalog span {
+	display: block;
+	margin-top: 10px;
+	font-size: 17px;
+}
+
+.catalog .old-price {
+	
+	text-decoration: line-through;
+	color: #a9a9a9;
+	
+	min-height: 18px;
+	
+	
+}
+
+.catalog .new-price {
+	text-align: center;
+	width: 80px;
+	padding: 10px 30px;
+	margin-bottom: 20px;
+	color: #fff;
+	position: relative;
+	border-radius: 5px;
+	background-color: #EE3643;
+	
+}
+
+.catalog .new-price::after {
+	content: "";
+	position: absolute;
+	top: 0px;
+	right: -19px;
+	width: 0;
+	height: 0;
+	border: 19px solid white;
+	border-left-color: #EE3643;
+}
+
+.item-buttons {
+	opacity: 0;
+	position: absolute;
+	top: 43px;
+	text-align: center;
+}
+
+.catalog-item:hover .item-buttons {
+	opacity: 1;
+	transition-duration: 0.2s;
+	transition-delay: 0.1s;
+}
+
+.catalog-item:hover img {
+	opacity: 0;
+}
+
+
+
